# babg

./: README.md  bullet_speeds.py  pyproject.toml
data/: index.yaml  weapons_raw.csv
